master

2.34.6
- Mayhem
  Fix cooldown on /q/.
  Fix thread creation with no file on /q/.
  Fix 'Administrator/Moderator/Developer Replies' creating extra backlinks on /q/.
  Add /mlp/ archive redirection.

2.34.5
- Mayhem
  Add /q/ archive redirection.

2.34.4
- Mayhem
  Various fixes.
- ahodesuka
  Add png thumbnail replacement option.
- aeosynth
  Add Markdown.

2.34.3
- Mayhem
  Update /k/ archive redirection.
- noface
  Remove redundant entries from the updater

2.34.2
- noface
  Insert Quote Threading from aeosynths tree.

- Mayhem
  The Delete Links in the Menu now have a cooldown.

2.34.1
- Mayhem
  Divide the Delete Link in the Menu into a Post and Image deletion links.
  Add /wsg/ archive redirection.
  Add /fit/ archive redirection.

2.34.0
- Stallmanu
  Sage keybind
- that4chanwolf
  Remove Mayhem's stupidity.
  Redirect /jp/ to fuuka.warosu.org
  Autosage on /jp/ (now an option).
  Improve sage 'consistency'.
- Mayhem
  New feature: Menu, which
    - replaces and includes Report Button and Delete Button.
    - add one-click Filter buttons.
    - add download links to automatically save the file with its original filename. Chrome-only currently.
    - add archive links.
    - can integrate features from external userscripts/extensions, see https://github.com/MayhemYDG/4chan-x/wiki/Menu-API

2.33.8
- Mayhem
  Add Country filtering.

2.33.7
- Mayhem
  Add /ck/ archive redirection.

2.33.6
- Mayhem
  Update/fix archive redirection method.

2.33.5
- Mayhem
  Add /sp/ archive redirection.

2.33.4
- Mayhem
  Fix QR with the new captcha loading method.
  The QR will now work on /f/ too.

2.33.3
- Mayhem
  Revert changes that broke fetchers in Firefox.

2.33.2
- Mayhem
  After 1000+ characters, a character counter will appear in the QR.
  Add /soc/ archive redirection.

2.33.1
- Mayhem
  Add /r9k/ archive redirection.

2.33.0
- btmcsweeney
  Allow users to specify text for sauce links.
- Mayhem